fixes for dark mode

--- a/src/components/ConfirmModal.module.scss
+++ b/src/components/ConfirmModal.module.scss
@@ -12,7 +12,6 @@
   flex-direction: column;
   gap: 12px;
   text-align: left;
-  color: $text;
 }
 
 .title {
