--- a/src/components/park/ParkInviteModal.module.scss
+++ b/src/components/park/ParkInviteModal.module.scss
@@ -25,6 +25,10 @@
   .conflict-link {
     color: $pink;
   }
+
+  :global(.dark) & {
+    color: $red;
+  }
 }
 
 .friends-section {
