--- a/src/pages/UserEvents.module.scss
+++ b/src/pages/UserEvents.module.scss
@@ -8,7 +8,6 @@
 
 .title {
   font-size: $title-font-size;
-  color: $text;
   height: 34px;
   display: flex;
   align-items: center;
@@ -21,7 +20,6 @@
 
 .subtitle {
   font-size: $title-font-size;
-  color: $text;
   height: 34px;
 }
 
